<resources>
    <string name="app_name">和旅行</string>
    <string name="nav_home">首页</string>
    <string name="nav_visibility">发现</string>
    <string name="nav_friends">朋友圈</string>
    <string name="nav_travel">行程</string>
    <string name="nav_profile">我的</string>

    <string name="exit_click_back_again">再次点击退出应用.</string>
    <string name="login">登录</string>
    <string name="loading">Loading</string>

    <!-- error view page -->
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_view_no_data">暂无内容</string>


    <!--home page-->
    <string name="category_title">热门行程</string>
    <string name="category_title_more">更多 ></string>
    <string name="plan_category_self_guided">自由行</string>

    <!--introduce-->
    <string name="title_1">Welcome, Programmer</string>
    <string name="title_font">CaviarDreams_Bold.ttf</string>
    <string name="desc_1">Github is the programmer\'s facebook.</string>
    <string name="desc_font">aller_It.ttf</string>
    <string name="title_2">Here, Code is everything</string>
    <string name="desc_2">Read the fucking source code.</string>
    <string name="title_3">Let\'s coding</string>
    <string name="desc_3">Talk is cheap, show me the code</string>

    <!--profile-->
    <string name="tv_my_score">积分 0</string>
    <string name="zero">0</string>
    <string name="main_tab_name_bubbles">冒泡</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="blog">我的博客</string>
    <string name="message">我的消息</string>
    <string name="user_score">积分</string>
    <string name="my_travel">我的足迹</string>

    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_about">关于和旅行</string>
    <string name="actionbar_title_user_information">我的资料</string>

    <!--设置中心-->
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="feedback">意见反馈</string>
    <string name="about" translatable="false">关于我们</string>
    <string name="update">检查更新</string>
    <string name="setting_cancel">注销登录</string>

    <string name="logout_success">注销成功</string>
    <string name="logout_failed">注销失败</string>
    <string name="is_clear_cache">是否清空缓存?</string>
    <string name="program_error_hint">程序错误</string>
    <string name="feature_suggestions_hint">功能建议</string>
    <string name="feedback_hint">我们将不断改进</string>
    <string name="screenshot_hint">截图描述：（可选）</string>
    <string name="submit_feedback_hint">提交反馈</string>
    <string name="cache_size_zero">0 KB</string>

    <string name="itrip_site">官网</string>
    <string name="know_more">了解更多</string>
    <string name="copyright">© 2017 itrip.live All rights reserved.</string>

    <string name="qr_code_tip">扫一扫上面的二维码，加我为好友</string>
    <string name="qr_code_tip2">(长按保存到本地)</string>

    <!-- 博客区 -->
    <string name="follow_done">已关注</string>
    <string name="join_time">加入于 :</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>

    <!--lce-->
    <string name="empty_text">Nothing Here</string>
    <string name="empty_desc">We couldn\'t find anything.</string>
    <string name="error_desc">Looks like something went wrong!</string>
    <string name="retry_btn_label">Retry</string>

    <string name="copy_success">复制成功</string>
    <string name="send_hint">发送</string>
    <string name="comment_hint">请输入评论</string>

    <!--分享-->
    <string name="share_to">分享</string>
    <string name="platform_sina">微博</string>
    <string name="platform_wechat_circle">朋友圈</string>
    <string name="platform_wechat">微信</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_tweet">动弹</string>
    <string name="platform_browser">浏览器</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_more_option">更多</string>

    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="state_submit">正在提交中&#8230;</string>
    <string name="pub_comment_hint">发表评论</string>
    <string name="pub_comment_success">评论成功</string>
    <string name="pub_comment_failed">评论失败</string>
    <string name="reply_hint">回复:</string>


    <!--新版登录专用-->
    <string name="login_input_username_hint">手机号或邮箱</string>
    <string name="login_input_username_hint_error">请输入正确的手机号或邮箱&#8230;</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_username_error">用户名太长&#8230;</string>
    <string name="hint_password">密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="hint_username_ok">请输入正确的手机号码</string>
    <string name="user_hint_login">点击头像登录</string>
    <string name="reset_pwd_label">重置密码</string>
    <string name="retrieve_pwd_label">找回密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="login_success_hint">登录成功</string>
    <string name="send_sms_code_success_hint">已成功发送验证码</string>
    <string name="reset_success_hint">密码重置成功</string>
    <string name="register_success_hint">注册成功</string>
    <string name="share_hint">抱歉,您未安装该应用,不能分享&#8230;</string>
    <string name="login_hint">抱歉,您未安装该应用,不能登录&#8230;</string>
    <string name="login_wechat_hint">正在启动微信中&#8230;</string>
    <string name="login_tencent_hint">正在启动QQ中&#8230;</string>
    <string name="login_weibo_hint">正在启动微博中&#8230;</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>

    <string name="progress_submit">正在提交…</string>
    <string name="footer_type_net_error">网络错误</string>

</resources>
