<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_visibility"
        android:icon="@drawable/ic_visibility_black_24dp"
        android:title="@string/nav_visibility" />
    <!--<item-->
        <!--android:id="@+id/navigation_friends"-->
        <!--android:icon="@drawable/ic_camera_black_24dp"-->
        <!--android:title="@string/nav_friends" />-->
    <item
        android:id="@+id/navigation_travel"
        android:icon="@drawable/ic_travel_black_24dp"
        android:title="@string/nav_travel" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/nav_profile" />


</menu>
