<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            style="@style/h_line"
            android:layout_marginTop="20dip" />

        <LinearLayout
            android:id="@+id/rl_clean_cache"
            style="@style/option_item_rl"
            android:background="@drawable/ic_material"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                style="@style/option_item_text_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/clean_cache" />

            <TextView
                android:id="@+id/tv_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <View
                android:id="@+id/view"
                style="@style/h_line"
                android:layout_marginLeft="@dimen/dimen_14" />
        </FrameLayout>

        <View style="@style/h_line" />

        <View
            style="@style/h_line"
            android:layout_marginTop="20dip" />

        <FrameLayout
            android:id="@+id/rl_feedback"
            style="@style/option_item_rl"
            android:background="@drawable/ic_material">

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/feedback" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <View
                style="@style/h_line"
                android:layout_marginLeft="@dimen/dimen_14" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/rl_about"
            style="@style/option_item_rl"
            android:background="@drawable/ic_material">

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/about" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <View
                style="@style/h_line"
                android:layout_marginLeft="@dimen/dimen_14" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/rl_check_version"
            style="@style/option_item_rl"
            android:background="@drawable/ic_material">

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/update" />
        </FrameLayout>

        <View style="@style/h_line" />

        <View
            android:id="@+id/setting_line_top"
            style="@style/h_line"
            android:layout_marginTop="20dp" />

        <FrameLayout
            android:id="@+id/rl_cancel"
            style="@style/option_item_rl"
            android:background="@drawable/ic_material"
            android:textAlignment="center">

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/setting_cancel" />
        </FrameLayout>

        <View
            android:id="@+id/setting_line_bottom"
            style="@style/h_line" />
    </LinearLayout>

</RelativeLayout>
