<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18" />
    </android.support.v7.widget.Toolbar>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dimen_12"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_12"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_error"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/program_error_hint" />

        <RadioButton
            android:id="@+id/radio_button_suggestion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_12"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/feature_suggestions_hint" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_feed_back"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="@dimen/dimen_12"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        android:padding="@dimen/dimen_8"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:text="@string/screenshot_hint" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_add"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="@dimen/dimen_12"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_12"
            android:background="@color/white"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_tweet_add" />

        <ImageView
            android:id="@+id/image_view_clear"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:background="@drawable/ib_clear_image_selector"
            android:contentDescription="@null"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

    <Button
        android:id="@+id/button_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_12"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:background="@drawable/selector_shake_get"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/submit_feedback_hint"
        android:textColor="@color/white"
        tools:targetApi="lollipop" />
</LinearLayout>
